<resources>
    <string name="app_name">Android-sqlite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_price">Enter price</string>
    <string name="add_category">Add Category</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="sqlite">SQLite</string>
    <string name="modify_product">Modify Product</string>
</resources>