<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar2"
      android:layout_width="409dp"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@string/add_product"
      app:titleTextColor="@android:color/white" />

  <Spinner
      android:id="@+id/categorySpinner"
      android:layout_width="206dp"
      android:layout_height="34dp"
      android:layout_marginTop="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.078"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/productPriceTxt" />

  <Button
      android:id="@+id/saveCategoryBtn"
      android:layout_width="79dp"
      android:layout_height="39dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="22dp"
      android:text="@string/add_product"
      app:layout_constraintStart_toEndOf="@+id/categorySpinner"
      app:layout_constraintTop_toBottomOf="@+id/productPriceTxt" />

  <EditText
      android:id="@+id/productNameTxt"
      android:layout_width="381dp"
      android:layout_height="38dp"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/enter_name"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.533"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

  <EditText
      android:id="@+id/productPriceTxt"
      android:layout_width="379dp"
      android:layout_height="42dp"
      android:layout_marginTop="20dp"
      android:ems="10"
      android:hint="@string/enter_price"
      android:inputType="number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/productNameTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>